source/_sass/base.scss
//
//                                            _|
//  _|  _|_|    _|_|      _|_|_|    _|_|    _|_|_|_|
//  _|_|      _|_|_|_|  _|_|      _|_|_|_|    _|
//  _|        _|            _|_|  _|          _|
//  _|          _|_|_|  _|_|_|      _|_|_|      _|_|
//
//

body {
  -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
      -ms-text-size-adjust: none;
          text-size-adjust: none;
  text-autospace: none;
  margin: 0;
}

h1, p {
  margin: 0 auto;
}

//
//                      _|            _|
//  _|    _|  _|_|_|          _|_|_|  _|    _|_|_|    _|_|_|    _|_|_|
//  _|    _|  _|    _|  _|  _|        _|  _|    _|  _|_|      _|_|
//  _|    _|  _|    _|  _|  _|        _|  _|    _|      _|_|      _|_|
//    _|_|_|  _|    _|  _|    _|_|_|  _|    _|_|_|  _|_|_|    _|_|_|
//
//

.plain {
  font: unset;
  padding: unset;
  border: unset;
  margin: unset;
}

//
//                                  _|            _|        _|
//  _|      _|    _|_|_|  _|  _|_|        _|_|_|  _|_|_|    _|    _|_|      _|_|_|
//  _|      _|  _|    _|  _|_|      _|  _|    _|  _|    _|  _|  _|_|_|_|  _|_|
//    _|  _|    _|    _|  _|        _|  _|    _|  _|    _|  _|  _|            _|_|
//      _|        _|_|_|  _|        _|    _|_|_|  _|_|_|    _|    _|_|_|  _|_|_|
//
//

$bg-color: white;
$fg-color: #363636;
$ui-color: #595959;
$accent-color: springgreen;

$link-color: dodgerblue;
$visited-color: darkorchid;

$code-bg-color: gainsboro;
$code-fg-color: #1f1f1f;

$font-text: 'Linux Libertine O', FreeSerif, 'Times New Roman', Times, Baskerville, 'Baskerville Old Face', serif;
$font-emph: 'Linux Biolinum O', FreeSans, 'Myriad Pro', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Segoe UI, sans-serif;
$font-code: 'Source Code Pro', Inconsolata, Menlo, Monaco, Consolas, monospace, serif;
$font-text-ja: IPAexMincho, YuMincho, 'Hiragino Mincho ProN', 'Yu Mincho', HGSMinchoE, Meiryo, sans-serif;
$font-emph-ja: IPAexGothic, YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', 'Yu Gothic', Meiryo, sans-serif;
$font-code-ja: CodeM, Ricty, 'Source Han Code JP', Myrica, 'IPAGothic', Menlo, 'MS Gothic', monospace, serif;

//
//      _|_|                        _|
//    _|        _|_|    _|_|_|    _|_|_|_|
//  _|_|_|_|  _|    _|  _|    _|    _|
//    _|      _|    _|  _|    _|    _|
//    _|        _|_|    _|    _|      _|_|
//
//

html {
  font: 19.2px $font-text;
  &:lang(ja) {
    font-family: $font-text-ja;
  }
}
h1, h2, h3, h4, h5, h6, th, dt, dt > b, strong {
  font-weight: 500;
  font-family: $font-emph;
  &:lang(ja) {
    font-family: $font-emph-ja;
  }
}
dt > dfn, dfn, em {
  &:lang(ja) {
    font-style: normal;
    font-family: $font-emph-ja;
  }
}
a, span[lang] {
  font-family: $font-text;
  &:lang(ja) {
    font-family: $font-text-ja;
  }
}
code {
  font-family: $font-code;
  &:lang(ja) {
    font-family: $font-code-ja;
  }
}

pre {
  font-size: 88.7%;
  &:lang(ja) {
    font-size: 100%;
  }
}
:not(pre) > code {
  font-size: 78.6%;
  &:lang(ja) {
    font-size: 88.7%;
  }
}

body > header {
  & > nav > ul > li > a {
    font-weight: 500;
    font-family: $font-emph;
    &:lang(ja) {
      font-family: $font-emph-ja;
    }
  }
}

//
//    _|                            _|
//  _|_|_|_|    _|_|    _|    _|  _|_|_|_|
//    _|      _|_|_|_|    _|_|      _|
//    _|      _|        _|    _|    _|
//      _|_|    _|_|_|  _|    _|      _|_|
//
//

html {
  text-align: justify;
  &:lang(ja) {
    text-align: left;
    text-align: start;
  }
  line-height: 1.618;
}

q {
  &::before {
    content: '“';
  }
  &::after {
    content: '”';
  }
}

//
//  _|  _|            _|
//  _|      _|_|_|    _|  _|
//  _|  _|  _|    _|  _|_|
//  _|  _|  _|    _|  _|  _|
//  _|  _|  _|    _|  _|    _|
//
//

a {
  text-decoration: none;
  border-bottom: dashed $link-color 0;
}

a:link {
  color: $link-color;
  border-bottom-color: $link-color;
}

a:visited {
  color: $visited-color;
  border-bottom-color: $visited-color;
}

a:hover {
  border-bottom-width: 1px;
}

//
//  _|                                            _|
//  _|    _|_|_|  _|    _|    _|_|    _|    _|  _|_|_|_|
//  _|  _|    _|  _|    _|  _|    _|  _|    _|    _|
//  _|  _|    _|  _|    _|  _|    _|  _|    _|    _|
//  _|    _|_|_|    _|_|_|    _|_|      _|_|_|      _|_|
//                      _|
//                  _|_|

html {
  background-color: $bg-color;
  color: $fg-color;
}

body {
  box-sizing: border-box;
  overflow-y: scroll;
}

:not(pre) > code {
  background-color: $code-bg-color;
  color: $code-fg-color;
  padding: 0.146em 0.382em;
  border-radius: 0.146em;
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 1em;
  margin-bottom: 0.618em;
  padding-top: 0.618em;
}
h1 {
  font-size: 196.6%;
}
h2 {
  font-size: 161.8%;
}
h3 {
  font-size: 134.8%;
}
h4 {
  font-size: 115.5%;
}
h5 {
  font-size: 103.9%;
}
h6 {
  font-size: 100.0%;
}

hr {
  margin: 1.618em 0 1em;
  border: none;
}

p {
  margin: 1em 0 0.618em;
}
ul, ol {
  margin: 0.618em 0 1em;
}

blockquote {
  $quote-color: forestgreen;
  padding: 0;
  border-left: 0.382em solid $quote-color;
  margin-top: 1em
  margin-bottom 0.618em;
  & > blockquote,
  & > table, & > figure, & > pre,
  & > ul, & > ol, & > dl,
  & > p {
    &:first-child {
      margin-top: 0;
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
  & > p {
    margin-top: 1em;
    margin-bottom: 0.618em;
  }
}

body > header {
  display: flex;
  & > h1 {
    font-size: 100%;
    margin: 0;
    padding: 0;
    & > a {
      display: flex;
      padding: 0.618em;
      & > img {
        width: 24px;
        height: 24px;
      }
    }
    & > a:hover > img {
      transform: rotate(180deg);
    }
  }

  & > nav {
    overflow-x: auto;
    & > ul {
      display: flex;
      white-space: nowrap;
      list-style: none;
      padding-left: 0;
      &:lang(he) {
        // padding-left: 0;
        padding-right: 0;
      }
      margin-top: 0;
      margin-bottom: 0;
      & > li {
        display: block;
        & > a {
          display: block;
          padding: 0.618em 1em;
          height: 24px;
          line-height: 24px;
        }
      }
    }
  }

  a:hover {
    border: 0;
  }
}

main {
  // margin: 0 0.618em;
  margin: 0;
  aside,
  h1, h2, h3, h4, h5, h6, hr,
  ul, ol,
  p, blockquote {
    margin-left: 1.618rem;
    margin-right: 1.618rem;
  }
}

.header-anchor {
  opacity: 0;
  font-size: 1rem;
  vertical-align: middle;
}

h1, h2, h3, h4, h5, h6 {
  &:target .header-anchor,
  &:hover .header-anchor {
    opacity: 1;
  }
}

section, article, nav, aside {
  &:target {
    h1, h2, h3, h4, h5, h6 {
      .header-anchor {
        opacity: 1;
      }
    }
  }
}

.header-anchor:focus {
  opacity: 1;
}

.recent-posts {
  margin: 0 0.618em;
}

footer {
  border-top: 1px dashed $ui-color;
  margin: 1.618em 1em 0;
  padding: 1em 0.618em;
  & > p {
    margin: 0;
  }
}

aside {
  margin: 0.618em 0 1em;
  & > p {
    margin: 0;
  }
}
.note {
  border: 1px dashed $ui-color;
  padding: 0.382em 0.618em 0.382em 4.854em;
}
.note::before {
  content: 'NOTE';
  font-weight: 500;
  font-size: 1rem;
  font-family: $font-emph;
  margin-left: -4.236em;
  float: left;
}

//
//        _|
//    _|_|_|    _|_|      _|_|_|    _|_|    _|  _|_|
//  _|    _|  _|_|_|_|  _|        _|    _|  _|_|
//  _|    _|  _|        _|        _|    _|  _|
//    _|_|_|    _|_|_|    _|_|_|    _|_|    _|
//
//

body > header {
  background-color: mix($fg-color, $accent-color, 14.6%);
  color: $bg-color;
  & > h1 > a > img {
    transition: 180ms ease;
  }
  a:link, a:visited {
    color: $bg-color;
    border-color: $bg-color;
  }
  a:hover {
    background-color: $bg-color;
    color: mix($fg-color, $accent-color, 14.6%);
  }
}

//
//    _|                _|        _|
//  _|_|_|_|    _|_|_|  _|_|_|    _|    _|_|
//    _|      _|    _|  _|    _|  _|  _|_|_|_|
//    _|      _|    _|  _|    _|  _|  _|
//      _|_|    _|_|_|  _|_|_|    _|    _|_|_|
//
//

table {
  margin: 0.618em auto 1.618em;
  border-collapse: collapse;
  th, td {
    white-space: nowrap;
    padding: 0.382em 0.618em;
    border: 1px dashed $ui-color;
  }
}

//
//  _|  _|              _|
//  _|        _|_|_|  _|_|_|_|
//  _|  _|  _|_|        _|
//  _|  _|      _|_|    _|
//  _|  _|  _|_|_|        _|_|
//
//

ol {
  padding-left: 2em;
  &:lang(he) {
    padding-left: initial;
    padding-right: 2em;
  }
}
ul {
  padding-left: 1.5em;
  &:lang(he) {
    padding-left: initial;
    padding-right: 1.5em;
  }
}
li > p {
  margin-top: 0;
  margin-bottom: 0;
}

//
//      _|_|_|_|_|                                    _|  _|
//    _|          _|  _|_|_|  _|_|      _|_|      _|_|_|        _|_|_|
//  _|    _|_|_|  _|  _|    _|    _|  _|_|_|_|  _|    _|  _|  _|    _|
//  _|  _|    _|  _|  _|    _|    _|  _|        _|    _|  _|  _|    _|
//  _|    _|_|_|_|    _|    _|    _|    _|_|_|    _|_|_|  _|    _|_|_|
//    _|
//      _|_|_|_|_|_|

@media screen and (max-width: 1000px) {
  html {
    font-size: unquote(calc(13.6px + 0.56vw));
  }
}

@media screen and (max-width: 999.984375px) {
  html {
    text-align: left;
    text-align: start;
  }
}

@media screen and (max-width: 1332.984375px) {
  .container {
    max-width: 1000px;
  }
}

@media screen and (min-width: 1333px) {
  .container {
    display: flex;
    flex-direction: row-reverse;
  }

  .main-column {
    flex-basis: 1000px;
    flex-grow: 1;
  }

  .side-column {
    flex-shrink: 0;
    flex-basis: 333px;
    height: fit-content;
    max-height: 100vh;
    position: sticky;
    top: 0;
    overflow-y: auto;
  }
}

